# fastcrc

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  Cargo.toml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py  tea.yaml  test_fastcrc.py
.github/workflows/: ci.yml
benchmarks/: benchmark_result.txt  test_benchmark.py
docs/: conf.py  index.rst  requirements.txt
fastcrc/: __info__.py  __init__.py  __version__.py  algorithm.py  crc16.py  crc32.py  crc64.py  crc8.py  utils.py
src/: lib.rs
tests/: test_fastcrc.py
