[package]
name = "fastcrc"
version = "0.2.1-dev.7"
authors = ["overcat <4catcode@gmail.com>"]
edition = "2018"
description = "A hyper-fast Python module for computing CRC(16, 32, 64) checksum"
license = "MIT License"
repository = "https://github.com/overcat/fastcrc"
homepage = "https://github.com/overcat/fastcrc"
readme = "README.rst"
keywords = ["crc", "crc16", "crc32", "crc64"]

[lib]
name = "fastcrc"
crate-type = ["cdylib"]

[dependencies]
crc = "3.0.0"
paste = "1.0.6"

[dependencies.pyo3]
version = "0.15.1" # Python 3.6 support, dont upgrade
features = ["extension-module", "abi3-py36"]