[package]
name = "fastcrc"
version = "0.3.5"
authors = ["overcat <4catcode@gmail.com>"]
edition = "2021"
description = "A hyper-fast Python module for computing CRC(8, 16, 32, 64) checksum"
license = "MIT License"
repository = "https://github.com/overcat/fastcrc"
homepage = "https://github.com/overcat/fastcrc"
readme = "README.rst"
keywords = ["crc", "crc8", "crc16", "crc32", "crc64"]

[lib]
name = "fastcrc"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.26.0"
crc = "3.3.0"
paste = "1.0.15"
