[project]
name = "fastcrc"
version = "0.2.1"
requires-python = ">=3.7"
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
homepage = "https://github.com/overcat/fastcrc"
repository = "https://github.com/overcat/fastcrc"
dynamic = ["version"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/overcat/fastcrc/issues"

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
