[project]
name = "fastcrc"
version = "0.3.2"
requires-python = ">=3.7"
readme = "README.rst"
description = "A hyper-fast Python module for computing CRC(8, 16, 32, 64) checksum"
authors = [{ name = "overcat", email = "4catcode@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["crc", "crc8", "crc16", "crc32", "crc64"]

[project.urls]
homepage = "https://github.com/overcat/fastcrc"
repository = "https://github.com/overcat/fastcrc"
documentation = "https://fastcrc.readthedocs.io"

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
exclude = [".github/**/*", "benchmarks/**/*", "tests/**/*", "docs/**/*"]
